samples/_failures_safe/1761469084_d51d91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_499cbfb1.c: In function ‘main’:
./samples/SAFE/__tmp_499cbfb1.c:163:15: error: missing terminating " character
  163 |     if (scanf("%
      |               ^~
./samples/SAFE/__tmp_499cbfb1.c:163:5: error: expected expression at end of input
  163 |     if (scanf("%
      |     ^~
./samples/SAFE/__tmp_499cbfb1.c:163:5: error: expected declaration or statement at end of input
